Minor update controller for managing scorecards
-
