# main.py
@@ -6,6 +6,7 @@ from fastapi.responses import JSONResponse
 
 from service.handlers.cleanup import finalize_resource
 from service.handlers.metric import sync_metric
+from service.handlers.scorecard import sync_scorecard
 from service.models.models import MetacontrollerRequest
 from service.utils.endpoint_filter import EndpointFilter
 
@@ -21,6 +22,13 @@ uvicorn_logger.addFilter(EndpointFilter(path="/healthz"))
 async def metric(request_data: MetacontrollerRequest = Body(...)):
     logger.info(f"Received sync request for metric: {request_data.parent.metadata.name}")
     response_content, status_code = await sync_metric(request_data)
+    return JSONResponse(response_content, status_code)
+
+
+@app.post("/scorecard/sync")
+async def metric(request_data: MetacontrollerRequest = Body(...)):
+    logger.info(f"Received sync request for scorecard: {request_data.parent.metadata.name}")
+    response_content, status_code = await sync_scorecard(request_data)
     return JSONResponse(response_content, status_code)
 
 
